@startuml
' cf https://plantuml.com/fr/
' et https://marketplace.visualstudio.com/items?itemName=jebbs.plantuml#use-plantuml-server-as-render
' et https://github.com/Hywan/Database-to-PlantUML pour convertir une BDD en UML

!define table(x) class x << (T,#ffebf3) >>
hide methods
hide stereotypes
hide @unlinked
skinparam classFontColor #3b0018
skinparam classArrowColor #ff0066
skinparam classBorderColor #ff0066
skinparam classBackgroundColor ##f6f4ee
skinparam shadowing false

table(pictures_album) {
    {field} +id					int(11)
    {field} album_picture_id	int(11)
    {field} name				varchar(255)
    {field} images				varchar(255)
}

album_picture "1" <-- "0..*" pictures_album : on album_picture_id = id

table(album_picture) {
    {field} +id					int(11)
    {field} title				varchar(255)
    {field} description			longtext
    {field} slug				varchar(255)
    {field} updated_at			datetime
    {field} picture				varchar(255)
    {field} category_album_id	?int(11)
    {field} tag_id				?int(11)
}

'category_album <-- album_picture : on category_album_id = id
tag "0..*" <-- "0..*" album_picture : on tag_id = id

table(role) {
    {field} +id		int(11)
    {field} libelle	varchar(10)
}

table(doctrine_migration_versions) {
    {field} +version			varchar(191)
    {field} executed_at		?datetime
    {field} execution_time	?int(11)
}

table(event_rate) {
    {field} +id			int(11)
    {field} event_id	int(11)
    {field} name	    varchar(255)
    {field} description	    ?varchar(3000)
    {field} amount	    float
}

table(option_rate) {
    {field} +id			int(11)
    {field} event_id	int(11)
    {field} name	    varchar(255)
    {field} description	    ?varchar(3000)
    {field} amount	    float
}

table(tag) {
    {field} +id		int(11)
    {field} title	varchar(255)
    {field} color	varchar(255)
    {field} slug	varchar(255)
}


table(event) {
    {field} +id								int(11)
    {field} name							varchar(255)
    {field} description						**?**longtext
    {field} maximum_number_of_participants	?int(11) **default NULL**
    {field} --adult_rate--						?double
    {field} --child_rate--						?double
    {field} start_date						?datetime
    {field} end_date						?datetime
    {field} **season**  						?varchar(55) 'comment NULL pour les événements qui ne sont pas des adhésions'
    {field} **regitration_open_date**			datetime
    {field} registration_deadline			datetime **default start_date+10j**
    {field} --price--							int(11)
    {field} link_image						?varchar(255)
    {field} slug							varchar(255)
    {field} allow_visitor					tinyint(1)
}

table(event_subscription) {
    {field} +id     	            int(11)
    {field} event_id	            int(11)
    {field} member_id	            int(11)
    {field} payment_id	            int(11)
    {field} event_rate_id	        int(11)
    {field} user_id	                int(11)
    {field} status					varchar(255)
    {field} comment					?varchar(5000)
    {field} link_image				?varchar(255)
}

event "1" <-- "0..*" event_subscription : on event_id = id
member "1" <-- "0..*" event_subscription : on event_id = id
payment "1" <-- "0..*" event_subscription : on event_id = id
user "1" <-- "0..*" event_subscription : on event_id = id
event_rate "1" <-- "0..*" event_subscription : on event_id = id


table(event_subscription_event_option) {
    {field} +id     	                int(11)
    {field} event_subscription_id	    int(11)
    {field} event_option_id	            int(11)
}

event_option "1..*" <-- "1..*" event_subscription : on member_id = id


table(criteria) {
    {field} +id			int(11)
    {field} name		varchar(255)
    {field} type		varchar(50)
    {field} relation	varchar(50)
    {field} value		varchar(255)
}


table(contact) {
    {field} +id			int(11)
    {field} description	longtext
    {field} title		?varchar(255)
}


table(home_comment) {
    {field} +id			int(11)
    {field} title		?varchar(255)
    {field} description	?longtext
}


table(reset_password) {
    {field} +id			int(11)
    {field} user_id		int(11)
    {field} token		varchar(255)
    {field} created_at	datetime
}

user "1" <-- "1..*" reset_password : on user_id = id

table(category_album) {
    {field} +id		int(11)
    {field} name	varchar(255)
    {field} color	varchar(255)
    {field} slug	varchar(255)
}


table(member) {
    {field} +id							int(11)
    {field} responsible_adult_id		int(11)
    {field} first_name					varchar(55)
    {field} last_name					varchar(55)
    {field} sex							varchar(10)
    {field} birthdate					date
    {field} email						**?**varchar(255)
    {field} street_address				**?**varchar(255)
    {field} postal_code					**?**varchar(55)
    {field} city						**?**varchar(100)
    {field} phone_number				**?**varchar(50)
    {field} emergency_phone				**?**varchar(55)
    {field} nationality					**?**varchar(100)
    {field} photo_name					?varchar(255)
    {field} comment						?varchar(255)
    {field} level						?varchar(55)
    {field} status						?varchar(55)
    {field} bureau  					tinyint(1) default '0'
    {field} instructor					tinyint(1) default '0'
    {field} --suscription_date--			?date
    {field} membership_state			?varchar(55)
}

user "1" <-- "1" member : on responsible_adult_id = id

table(slide_picture) {
    {field} +id				int(11)
    {field} title			?varchar(255)
    {field} illustration	varchar(255)
}

table(credential) {
    {field} +id				int(11)
    {field} api_key			varchar(5000)
}

table(user) {
    {field} +id			int(11)
    {field} email		varchar(180)
    {field} roles		longtext
    {field} password	varchar(255)
    {field} first_name	varchar(55)
    {field} last_name	varchar(55)
    {field} is_verified	tinyint(1)
    {field} street_address				**?**varchar(255)
    {field} postal_code					**?**varchar(55)
    {field} city						**?**varchar(100)
    {field} phone_number				**?**varchar(50)
}

table(doctrine_migration_versions) {
    {field} +version			varchar(191)
    {field} executed_at		?datetime
    {field} execution_time	?int(11)
}
@enduml